--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,9 @@
 .container {
-  padding: 100px 0 0 200px;
+  margin-right: 48px;
+}
+
+.d-flex {
+  display: flex;
+  justify-content: center;
+  padding: 100px 200px 0 200px;
 }
