--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,7 @@ body {
   background-color: rgba(0, 0, 0, 0.05);
   font-family: "Heebo", sans-serif;
 }
+
+.m-bottom-16 {
+  margin-bottom: 16px;
+}
