friends can be followed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 
 <div class="d-flex">
   <div class="container">
+    <app-friendbox></app-friendbox>
+
     <app-hamster-card
       *ngFor="let i of [0, 1, 2, 3]"
       [text]="postTexts[i]"
