--- a/src/app/friend-suggestions/friend-suggestions.component.html
+++ b/src/app/friend-suggestions/friend-suggestions.component.html
@@ -1,4 +1,4 @@
-<app-friends></app-friends>
+<app-friends [canFollow]="false"></app-friends>
 
 <div class="m-bottom-16">
   <b>Freundesvorschlaege</b>
