--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,16 @@ body {
 .m-bottom-16 {
   margin-bottom: 16px;
 }
+
+.standard-cart {
+  width: 400px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  background-color: white;
+  margin-bottom: 32px;
+  box-sizing: border-box;
+}
+
+.padding-16 {
+  padding: 16px;
+}
