--- a/src/app/hamster-card/hamster-card.component.html
+++ b/src/app/hamster-card/hamster-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card standard-cart">
   <img src="./assets/img/{{ img }}" alt="" />
   <p>{{ text }}</p>
   <button>Like</button>
