material design added

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,6 @@ body {
 .padding-16 {
   padding: 16px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
