--- a/src/app/hamster-card/hamster-card.component.html
+++ b/src/app/hamster-card/hamster-card.component.html
@@ -1,6 +1,6 @@
 <div class="card standard-cart">
   <img src="./assets/img/{{ img }}" alt="" />
   <p>{{ text }}</p>
-  <button>Like</button>
-  <button>Nachricht</button>
+  <button><mat-icon>favorite</mat-icon> Like</button>
+  <button><mat-icon>email</mat-icon>Nachricht</button>
 </div>
