--- a/src/app/hamster-card/hamster-card.component.scss
+++ b/src/app/hamster-card/hamster-card.component.scss
@@ -33,5 +33,15 @@
       right: 0;
       border-left: 1px solid rgba(0, 0, 0, 0.1);
     }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    mat-icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
+    }
   }
 }
